...
                                    context: context,
                                    defalutIcon: selectedIcon);
                                setState(() {
                                  selectedIcon = result;
                                });
                              },
                              child: const Text('Selecionar icone')),
                        ),
                      ]);
                    }),
                  ],
                ),
              ),
            ),
            actions: [
              Consumer<ClientTypeStore>(
                builder: (context, ClientTypeStore types, child) => TextButton(
                    child: const Text("Salvar"),
                    onPressed: () {
                      selectedIcon ??= Icons.credit_score;
                      types.addClientType(
                          ClientType(name: nomeInput.text, icon: selectedIcon));
                      selectedIcon = null;
                      setState(() {});
...
